<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <!-- Fragment de Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.farmaciadey.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_productos"
            app:destination="@id/navigation_productos"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registroFragment"
            app:destination="@id/registroFragment" />
    </fragment>

    <!-- Fragment de Registro -->
    <fragment
        android:id="@+id/registroFragment"
        android:name="com.farmaciadey.ui.auth.RegistroFragment"
        android:label="Registro"
        tools:layout="@layout/fragment_registro">
        <action
            android:id="@+id/action_registroFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- Fragment de Productos -->
    <fragment
        android:id="@+id/navigation_productos"
        android:name="com.farmaciadey.ui.productos.ProductosFragment"
        android:label="@string/nav_productos"
        tools:layout="@layout/fragment_productos" />

    <!-- Fragment de Carrito -->
    <fragment
        android:id="@+id/navigation_carrito"
        android:name="com.farmaciadey.ui.carrito.CarritoFragment"
        android:label="@string/nav_carrito"
        tools:layout="@layout/fragment_carrito" />

    <!-- Fragment de Perfil -->
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.farmaciadey.ui.perfil.PerfilFragment"
        android:label="@string/nav_perfil"
        tools:layout="@layout/fragment_perfil">
        <action
            android:id="@+id/action_perfil_to_historial_compras"
            app:destination="@id/historialComprasFragment" />
    </fragment>

    <!-- Fragment de Historial de Compras -->
    <fragment
        android:id="@+id/historialComprasFragment"
        android:name="com.farmaciadey.ui.fragment.HistorialComprasFragment"
        android:label="Historial de Compras"
        tools:layout="@layout/fragment_historial_compras" />

    <!-- Fragment de Boleta -->
    <fragment
        android:id="@+id/boletaFragment"
        android:name="com.farmaciadey.ui.fragment.BoletaFragment"
        android:label="Boleta de Pago"
        tools:layout="@layout/fragment_boleta">
        <argument
            android:name="transaccionId"
            app:argType="long" />
    </fragment>

    <!-- Acción global para ir a login -->
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="true" />

    <!-- Acción global para ir al carrito -->
    <action
        android:id="@+id/action_global_navigation_carrito"
        app:destination="@id/navigation_carrito" />

    <!-- Acciones globales para historial y boleta -->
    <action
        android:id="@+id/action_global_historial_compras"
        app:destination="@id/historialComprasFragment" />

    <action
        android:id="@+id/action_global_boleta"
        app:destination="@id/boletaFragment" />

</navigation>
